# graphics-learning

./: CMakeLists.txt  awesomeface.png~  eyeBall.png~  eyeFrame.png~  main.cpp  woodBoxSpecular.png~
glad/include/glad/: glad.c  glad.h
include/: camera.h
include/model/: model.cpp  model.h
include/physics/: rigid_cube.cpp  rigid_cube.h
include/shader/: basicShader.fsh  basicShader.vsh  cubeShader.fsh  cubeShader.vsh  mesh.h  mirrorShader.fsh  shader.cpp  shader.h  singleColor.fsh
shader/: basicShader.fsh  basicShader.vsh  shader.cpp  shader.h
